Se soluciona bug de documento, se hacen cambios menores orientados al perfil

--- a/templates/web/pormibarrio/faq/faq-es.html
+++ b/templates/web/pormibarrio/faq/faq-es.html
@@ -31,6 +31,7 @@
                 <dl>
                 	<dt>IM</dt>
                 	<dd>· <a href="#faq16" class="pregunta">¿Qué significan los estados que envía la IM?</a></dd>
+                	<dd>· <a href="#faq17" class="pregunta">¿Qué puedo reportar en cada categoría?</a></dd>
                 </dl>
             </div>
         </div>
@@ -182,6 +183,87 @@
 				</p>
 				<p>
 					3. Finalizado, significa que su reclamo ha finalizado para la IM, ya sea porque se terminaron todos los trabajos para solucionarlo, o su reclamo no correspondía. En la consulta de reclamos puede verse el informe donde se le indica lo realizado por la IM. En el reporte de Por Mi Barrio aparece "El problema asociado al reclamo ha quedado finalizado".
+				</p>
+			</div>
+			<div class="respuesta" id="faq17">
+            	<h2>¿Qué puedo reportar en cada categoría?</h2>
+            	<p></p>
+            		<h3>Arbolado</h3>
+            	<p>
+            		<b>Árbol deteriorado/riesgoso/extracción</b><br>
+					Reclamo sobre un árbol que según el vecino en estado irrecuperable: con fisuras, podrido, seco (“muerto”) y por lo tanto el vecino considera que está en peligro de caer; se asocia por ello la posibilidad de pedir su extracción. Es muy importante aclarar que si bien se puede solicitar la extracción, la pertinencia de la misma SIEMPRE será evaluada por un Ingeniero Agrónomo de la IM.
+				</p>
+				<p>
+            		<b>Problemas aéreos/podas/enfermedades</b><br>
+					Reclamo sobre un árbol que está interfiriendo con cables, focos o algún elemento de la vivienda; puede asimismo tener sus ramas con exceso de altura, la copa desbalanceada o presentar alguna enfermedad por insectos, hongos, etc.
+				</p>
+				<p>
+            		<b>Problemas raíces/veredas/subterráneos</b><br>
+					Reclamo sobre un árbol que está interfiriendo con instalaciones subterráneas: Ute, Ose, telefonía, gas, saneamiento, alumbrado, etc. También que haya roto o deteriorado la vereda, la edificación de una vivienda: muro, reja etc.
+				</p>
+				<p></p>
+					<h3>Plantación</h3>
+				<p>
+            		<b>Plantación</b><br>
+					Utilizado para solicitar que se plante un árbol, generalmente este reclamo surge cuando se ha hecho una extracción y no se ha reemplazado el ejemplar.Siempre el tipo de árbol a plantar será definido por el técnico municipal.
+				</p>
+				<p></p>
+					<h3>Bocas de tormenta</h3>
+				<p>
+            		<b>Boca de tormenta obstruida</b><br>
+					Refiere a la obstrucción de las bocas de tormenta, ya sea por una inundación permanente o luego de una lluvia. No corresponde reclamar por este “tipo” de problemas como boca de tormenta sucia, sin tapa (refiere al faltante de tapa de inspección), o con roturas.
+				</p>
+				<p></p>
+				<h3>Barrido</h3>
+				<p>
+            		<b>Falta de Barrido</b><br>
+					Refiere a que no se realizó en barrido de la calle en una zona con barrido manual o mecánico.
+				</p>
+				<p></p>
+					<h3>Basura, escombros y ferias</h3>
+				<p>
+            		<b>Levante de basurales</b><br>
+					Refiere a la solicitud de limpiar un sitio donde se ha arrojado y amontonado basura, NO a la situación donde han tirado basura en torno a un contenedor.
+				</p>
+				<p></p>
+					<h3>Contenedores</h3>
+				<p>
+            		<b>Residuos fuera del contenedor por capacidad insuficiente</b><br>
+					Refiere a cuando en forma habitual, el Contenedor se completa y no es posible para los vecinos depositar la basura. Implica “el conocimiento” de esta situación por parte del reclamante.
+				</p>
+				<p>
+            		<b>Residuos fuera del contenedor por uso indebido/clasificado</b><br>
+					Refiere a cuando existe basura entorno al Contenedor, pero NO porque el mismo se encuentre con su capacidad colmada sino que por el mal uso (indebido) de un Clasificador y/o un Vecino/a.
+				</p>
+				<p>
+            		<b>Rotura o incendio de contenedor (residuos fuera)</b><br>
+					Refiere a la rotura o falta de algún elemento del Contenedor, así como al incendio del mismo, <b>no dudar en llamar primero a los bomberos y después hacer su reclamo</b>.
+				</p>
+				<p>
+            		<b>Traslado/Rotación del contenedor</b><br>
+					Solicitud de alguna de estas acciones a la IM. Cabe aclarar que el sitio ocupado por un Contenedor ha sido estudiado y definido por la Institución, las ubicaciones van cambiando y se estudian todos los pedidos informándose el resultado a los solicitantes. El pedido no implica que se mueve de su posición actual. 
+				</p>
+				<p></p>
+					<h3>Viales</h3>
+				<p>
+	            	<b>Bache</b><br>
+					Agujero, hoyo, hundimiento en el pavimento de calles o caminos, producido por el uso u otras causas.
+				</p>
+				<p>
+	            	<b>Bache con agua</b><br>
+					Agujero, hoyo, hundimiento en el pavimento de calles o caminos, producido por el uso u otras causas, y que además contiene agua.
+				</p>
+				<p>
+	            	<b>Desnivel</b><br>
+					Diferencia de niveles en una calle o camino, causando depresión y/o elevación en el terreno.
+				</p>
+				<p>
+            		<b>Desnivel con agua</b><br>
+					Diferencia de niveles en una calle o camino, causando depresión y/o elevación en el terreno, y que además contiene agua.
+				</p>
+				<p>
+					<b>Grieta</b><br>
+					Hendidura alargada y poco profunda en la superficie del pavimento. Fisura estrecha producto de la separación de dos materiales.
 				</p>
 			</div>
         </div>
