--- a/templates/web/pormibarrio/auth/general.html
+++ b/templates/web/pormibarrio/auth/general.html
@@ -1,82 +1,99 @@
 [% INCLUDE 'header.html', title = loc('Sign in or create an account') %]
 
-<h1>[% loc('Sign in') %]</h1>
-
 <form action="[% c.uri_for() %]" method="post" name="general_auth" class="validate">
-    <fieldset>
-        <input type="hidden" name="r" value="[% c.req.params.r | html %]">
-            [% IF email_error;
+<input type="hidden" name="r" value="/">
+    
+    [% IF email_error;
 
-                # other keys include fqdn, mxcheck if you'd like to write a custom error message
+        # other keys include fqdn, mxcheck if you'd like to write a custom error message
 
-                errors = {
-                    missing => loc('Please enter your email'),
-                    other   => loc('Please check your email address is correct')
-                };
-                
-                loc_email_error = errors.$email_error || errors.other;
-            END %]
-        <label class="n" for="email">[% loc('Email') %]</label>
-        [% IF loc_email_error  %]
-            <div class="form-error">[% loc_email_error %]</div>
-        [% ELSIF sign_in_error %]
-            <div class="form-error">[% loc('There was a problem with your email/password combination. If you cannot remember your password, or do not have one, please fill in the &lsquo;sign in by email&rsquo; section of the form.') %]</div>
-        [% END %]
-        <input type="email" class="required email" id="email" name="email" value="[% email | html %]" placeholder="[% loc('Your email address') %]">
-
-        <div id="form_sign_in">
-            [% IF c.cobrand.moniker == 'fixmybarangay' %]
-            <h3>[% loc("Do you have a FixMyBarangay password?") %]</h3>
-            [% ELSE %]
-            <h3>[% loc("Do you have a FixMyStreet password?") %]</h3>
-            [% END %]
-
-            <div id="form_sign_in_yes" class="form-box">
-                <h5>[% loc('<strong>Yes</strong> I have a password') %]</h5>
-                
-                <label class="hidden-js n" for="password_sign_in">[% loc('<strong>Yes</strong> I have a password') %]</label>
-
-                <div class="form-txt-submit-box">
-                    <input type="password" name="password_sign_in" id="password_sign_in" value="" placeholder="[% loc('Your password') %]">
-                    <input class="green-btn" type="submit" name="sign_in" value="[% loc('Sign in') %]">
-                </div>
-                
-                <input type="checkbox" id="remember_me" name="remember_me" value='1'[% ' checked' IF remember_me %]>
-                <label class="inline n" for="remember_me">[% loc('Keep me signed in on this computer') %]</label>
-
+        errors = {
+            missing => loc('Please enter your email'),
+            other   => loc('Please check your email address is correct')
+        };
+        
+        loc_email_error = errors.$email_error || errors.other;
+    END %]
+    <div class="login">
+        <div class="bloque-sesion">
+            <div class="ir" id="report-new-login">
+                <h2>Accede a tu cuenta</h2>
+                <p>Conectate a tu cuenta para poder finalizar tu reporte y enviarlo a la Intendencia.</p>
             </div>
-            <div id="form_sign_in_no" class="form-box">
-                <h5>[% loc('<strong>No</strong> let me sign in by email') %]</h5>
-
-                <div class="general-sidebar-notes">
-                    <p>[% loc('Providing a name and password is optional, but doing so will allow you to more easily report problems, leave updates and manage your reports.') %]</p>
+            <div class="form-group">
+                <input type="email" class="form-control required [% IF field_errors.email %] error [% END %]" value="[% user.email | html %]" name="email" id="form_email" placeholder="Correo electrónico *">
+                [% IF field_errors.email  %]
+                    <p class="error-m">[% field_errors.email %]</p>
+                [% END %]
+            </div>
+            [% IF c.config.FACEBOOK_APP_ID || c.config.TWITTER_KEY %]
+                <div class="social-buttons">
+                    [% IF c.config.FACEBOOK_APP_ID %]
+                        <button name="facebook_sign_in" id="facebook_sign_in" value="facebook_sign_in" class="btn btn-block btn-social btn-facebook">Registrate con Facebook</button>
+                    [% END %]
+                    [% IF c.config.TWITTER_KEY %]
+                        <button name="twitter_sign_in" id="twitter_sign_in" value="twitter_sign_in" class="btn btn-block btn-social btn-twitter">Registrate con Twitter</button>
+                    [% END %]
                 </div>
+            [% END %]
+            <p>...ó ingresa los datos si ya tienes cuenta:</p>
+            <div class="checkbox-group">
+                <input type="checkbox" id="remember_me" name="remember_me" value='1'[% ' checked' IF remember_me %]>
+                <label class="n inline" for="remember_me">[% loc('Keep me signed in on this computer') %]</label>
+            </div>
+            <div class="form-group">
+                <input type="password" class="form-control [% IF field_errors.password %] error [% END %]" name="password_sign_in" id="password_sign_in" placeholder="Contraseña" value="">
+                [% IF field_errors.password  %]
+                    <p class="error-m">[% field_errors.password %]</p>
+                [% END %]
 
-                <label for="name">[% loc('Name') %]</label>
-                <input type="text" name="name" value="" placeholder="[% loc('Your name') %]">
-
-                <label for="password_register">[% loc('Password (optional)') %]</label>
-                <div class="form-txt-submit-box">
-                    <input type="password" name="password_register" id="password_register" value="" placeholder="[% loc('Enter a password') %]">
-                    <input class="green-btn" type="submit" name="email_sign_in" value="[% loc('Sign in') %]">
-                </div>
+                <input class="btn btn-block btn-reportar" type="submit" id="submit_sign_in" name="submit_sign_in" value="[% loc('Submit') %]">
+                <p class="no-account">
+                    ¿No utilizas redes sociales? No hay problema!<br>
+                    <a class="green registrate" href="#">Regístrate aquí con tu mail</a>
+                </p>
+            </div>
+        </div> <!-- bloque-sesion -->
+        <div class="bloque-registro">
+            <div class='full-wide'>
+                <a class="btn btn-back registrate-back" href="#">Volver</a>
+            </div>
+            <div class="ir">
+                <h2>Regístrate y se parte</h2>
+                <p>Crea una cuenta en PorMiBarrio y comienza a colaborar.</p>
+            </div>
+            <div class="form-group">
+                <input type="text" placeholder="Nombre y apellido" class="form-focus-trigger validName form-control [% IF field_errors.name %] error [% END %]" value="[% user.name | html %]" name="name" id="form_name" >
+                [% IF field_errors.name  %]
+                    <p class="error-m">[% field_errors.name %]</p>
+                [% END %]                        
+                <input type="text" placeholder="Cédula de Identidad: 0.000.000-0" class="form-control form-focus-trigger [% IF field_errors.identity_document %] error [% END %]" value="[% user.identity_document | html %]" name="identity_document" id="identity_document" >
+                [% IF field_errors.identity_document  %]
+                    <p class="error-m">[% field_errors.identity_document %]</p>
+                [% END %]
+                <input class="form-control" type="text" value="[% user.phone | html %]" name="phone" id="form_phone" placeholder="Teléfono (opcional)">
+                [% IF field_errors.phone  %]
+                    <p class="error-m">[% field_errors.phone %]</p>
+                [% END %]           
+                <input name="password_register" id="password_register" type="password" placeholder="Contraseña" class="form-control [% IF field_errors.password %] error [% END %]">
+                [% IF field_errors.password  %]
+                    <p class="error-m">[% field_errors.password %]</p>
+                [% END %]
+            </div>
+            <div class="form-group">
+                <button class="btn btn-block btn-green" type="submit" id="email_sign_in" name="email_sign_in">Regístrate y publica</button>
             </div>
         </div>
-    </fieldset>    
+        [% IF field_errors.identity_document || field_errors.name || field_errors.phone %]
+            <script>
+                var regCont = $('.bloque-registro .form-group').first();
+                $('#form_email').prependTo(regCont);
+                $('div.bloque-registro').slideDown();
+                $('div.bloque-sesion').slideUp();
+            </script>
+        [% END %]
+    </div> <!-- login -->
 </form>
-[% IF c.config.FACEBOOK_APP_ID || c.config.TWITTER_KEY %]
-<form action="[% c.uri_for() %]" method="post" name="social_auth" class="validate">
-	<fieldset>
-		<div>
-			[% IF c.config.FACEBOOK_APP_ID %]
-			<button name="facebook_sign_in" id="facebook_sign_in" value="facebook_sign_in"><img src="/i/FB-f-Logo__blue_50.png"/></button>
-			[% END %]
-			[% IF c.config.TWITTER_KEY %]
-			<button name="twitter_sign_in" id="twitter_sign_in" value="twitter_sign_in"><img src="/i/Twitter_logo_blue_50px_50px.png"/></button>
-			[% END %]
-		</div>
-	</fieldset>
-</form>
-[% END %]
+
 
 [% INCLUDE 'footer.html' %]
