--- a/templates/web/pormibarrio/header.html
+++ b/templates/web/pormibarrio/header.html
@@ -220,7 +220,7 @@
                         <a class="user-name" href="#">
                             <img class="img-circle" alt="" src="/cobrands/pormibarrio/images/no_pic.png">Anonimo
                         </a>
-                        <!--<li><a class="green" href="/auth">Inicia sesión ó Registrate</a></li>-->
+                        <li><a class="green" href="/auth">Inicia sesión ó Registrate</a></li>
                     </div>
                 <!-- /Vista sin login-->
                  [% END %]
