--- a/templates/web/pormibarrio/report/new/fill_in_details_form.html
+++ b/templates/web/pormibarrio/report/new/fill_in_details_form.html
@@ -147,39 +147,38 @@
             <div class="login">
     			<div class="bloque-sesion">
     				<div class="ir" id="report-new-login">
-    					<h2>Accede a tu cuenta</h2>
-    					<p>Conectate a tu cuenta para poder finalizar tu reporte y enviarlo a la Intendencia.</p>
-    				</div>
-    				<div class="form-group">
-    					<input type="email" class="form-control required [% IF field_errors.email %] error [% END %]" value="[% report.user.email | html %]" name="form_email" id="form_email" placeholder="Correo electrónico *">
-                        [% IF field_errors.email  %]
-                            <p class="error-m">[% field_errors.email %]</p>
+                            <h2>Accede a tu cuenta</h2>
+                            <p>Conectate a tu cuenta para poder finalizar tu reporte y enviarlo a la Intendencia.</p>
+                        </div>
+                        <div class="form-group">
+                            [% IF c.config.FACEBOOK_APP_ID || c.config.TWITTER_KEY %]
+                            <div class="social-buttons">
+                                [% IF c.config.FACEBOOK_APP_ID %]
+                                    <button name="facebook_sign_in" id="facebook_sign_in" value="facebook_sign_in" class="btn btn-block btn-social btn-facebook">Accede con Facebook</button>
+                                [% END %]
+                                [% IF c.config.TWITTER_KEY %]
+                                    <button name="twitter_sign_in" id="twitter_sign_in" value="twitter_sign_in" class="btn btn-block btn-social btn-twitter">Accede con Twitter</button>
+                                [% END %]
+                            </div>
+                            [% END %]
+                        </div>
+                        <p>...ó ingresa los datos si ya tienes cuenta:</p>
+                        [% IF sign_in_error  %]
+                            <p class="error-m">[% loc('Email or password incorrect. Maybe you want to <a class="green registrate" href="#">register</a>?') %]</p>
                         [% END %]
-    				</div>
-                    <div class="checkbox-group">
-                        <input type="checkbox" name="may_show_name_social" id="form_may_show_name_social" value="1"[% ' checked' IF report.anonymous==0 OR (c.cobrand.default_show_name AND report.anonymous=='') %]>
-                        <label class="inline" for="form_may_show_name_social">[% loc('Show my name publicly') %] </label>
-                    </div>
-    				[% IF c.config.FACEBOOK_APP_ID || c.config.TWITTER_KEY %]
-    					<div class="social-buttons">
-    						[% IF c.config.FACEBOOK_APP_ID %]
-    							<button name="facebook_sign_in" id="facebook_sign_in" value="facebook_sign_in" class="btn btn-block btn-social btn-facebook">Registrate con Facebook</button>
-    						[% END %]
-    						[% IF c.config.TWITTER_KEY %]
-    							<button name="twitter_sign_in" id="twitter_sign_in" value="twitter_sign_in" class="btn btn-block btn-social btn-twitter">Registrate con Twitter</button>
-    						[% END %]
-    					</div>
-    				[% END %]
-    				<p>...ó ingresa los datos si ya tienes cuenta:</p>
-                    <div class="checkbox-group">
-                        <input type="checkbox" id="remember_me" name="remember_me" value='1'[% ' checked' IF remember_me %]>
-                        <label class="n inline" for="remember_me">[% loc('Keep me signed in on this computer') %]</label>
-                    </div>
-    				<div class="form-group">
-    					<input type="password" class="form-control [% IF field_errors.password %] error [% END %]" name="password_sign_in" id="password_sign_in" placeholder="Contraseña" value="">
-                        [% IF field_errors.password  %]
-                            <p class="error-m">[% field_errors.password %]</p>
-                        [% END %]
+                        <div class="form-group">
+                            <input type="email" class="[% IF field_errors.email %] error [% END %]" value="[% user.email | html %]" name="email" id="form_email" placeholder="Correo electrónico *">
+                            [% IF loc_email_error  %]
+                                <p class="error-m">[% loc_email_error %]</p>
+                            [% END %]
+                            <input type="password" class="form-control [% IF field_errors.password %] error [% END %]" name="password_sign_in" id="password_sign_in" placeholder="Contraseña" value="">
+                            [% IF field_errors.password  %]
+                                <p class="error-m">[% field_errors.password %]</p>
+                            [% END %]
+                            <div class="checkbox-group">
+                                <input type="checkbox" id="remember_me" name="remember_me" value='1'[% ' checked' IF remember_me %]>
+                                <label class="n inline" for="remember_me">[% loc('Keep me signed in on this computer') %]</label>
+                            </div>
 
                         <input class="btn btn-block btn-reportar" type="submit" id="submit_sign_in" name="submit_sign_in" value="[% loc('Submit') %]">
                         <p class="no-account">
@@ -197,16 +196,15 @@
                         <p>Crea una cuenta en PorMiBarrio y comienza a colaborar.</p>
                     </div>
                     <div class="form-group">
-                        [% INCLUDE 'report/new/extra_name.html' %]
-                        <input type="text" placeholder="Nombre y apellido" class="form-focus-trigger validName form-control [% IF field_errors.name %] error [% END %]" value="[% report.name | html %]" name="name" id="form_name" >
+                        <input type="text" placeholder="Nombre y apellido" class="form-focus-trigger validName form-control [% IF field_errors.name %] error [% END %]" value="[% user.name | html %]" name="name" id="form_name" >
                         [% IF field_errors.name  %]
                             <p class="error-m">[% field_errors.name %]</p>
                         [% END %]                        
-                        <input type="text" placeholder="Cédula de Identidad: 0.000.000-0" class="form-control form-focus-trigger [% IF field_errors.identity_document %] error [% END %]" value="[% report.user.identity_document | html %]" name="identity_document" id="form_identity_document" >
+                        <input type="text" placeholder="Cédula de Identidad: 0.000.000-0" class="form-control form-focus-trigger [% IF field_errors.identity_document %] error [% END %]" value="[% user.identity_document | html %]" name="identity_document" id="identity_document" >
                         [% IF field_errors.identity_document  %]
                             <p class="error-m">[% field_errors.identity_document %]</p>
                         [% END %]
-                        <input class="form-control" type="text" value="[% report.user.phone | html %]" name="phone" id="form_phone" placeholder="Teléfono (opcional)">
+                        <input class="form-control" type="text" value="[% user.phone | html %]" name="phone" id="form_phone" placeholder="Teléfono (opcional)">
                         [% IF field_errors.phone  %]
                             <p class="error-m">[% field_errors.phone %]</p>
                         [% END %]           
