Cambios en login, varios de diseño

--- a/templates/web/pormibarrio/header.html
+++ b/templates/web/pormibarrio/header.html
@@ -120,8 +120,12 @@
                 <path class="path1" d="M17.857 3.732c-1.79-1.785-4.169-2.767-6.695-2.764-2.529 0.002-4.91 0.991-6.704 2.785-1.785 1.789-2.768 4.17-2.766 6.696 0.003 2.529 0.989 4.908 2.781 6.698l6.154 6.147c0.143 0.135 0.336 0.221 0.549 0.221 0.217 0 0.414-0.088 0.557-0.227l0.018-0.018 6.125-6.135c1.786-1.791 2.77-4.169 2.768-6.699-0.003-2.526-0.992-4.907-2.787-6.703zM16.911 16.17l-5.163 5.17c0 0 0 0 0-0.001-0.147 0.149-0.35 0.241-0.573 0.241-0.225 0.002-0.429-0.092-0.573-0.24v0l-5.164-5.159c-1.533-1.533-2.379-3.567-2.381-5.734-0.001-2.163 0.839-4.2 2.367-5.732 1.536-1.537 3.573-2.382 5.739-2.385 2.163-0.001 4.197 0.839 5.732 2.366 1.537 1.538 2.384 3.577 2.385 5.741 0.003 2.163-0.838 4.199-2.367 5.733z"></path>
                 <path class="path2" d="M15.206 10.185c0 2.211-1.793 4.004-4.004 4.004s-4.004-1.793-4.004-4.004c0-2.211 1.793-4.004 4.004-4.004s4.004 1.793 4.004 4.004z"></path>
             </g>
-            </defs>
-            </svg>
+            <g id="icon-icono9">
+                <path class="path1" d="M3.375 19.718c-0.225 0-0.447-0.007-0.666-0.021l-1.209-0.075 1.065-0.58c1.003-0.547 1.797-1.419 2.259-2.476-2.037-1.359-3.201-3.358-3.201-5.526 0-3.923 3.884-7.115 8.659-7.115 3.573 0 6.792 1.819 8.075 4.545 2.3 0.522 3.888 2.235 3.888 4.217 0 1.304-0.678 2.505-1.873 3.339 0.268 0.554 0.7 1.010 1.237 1.301l1.069 0.579-1.213 0.075c-0.716 0.046-1.461-0.029-2.181-0.22-0.622-0.165-1.201-0.409-1.725-0.725-0.753 0.073-1.545 0.009-2.274-0.188-1.763 1.028-3.927 1.476-6.103 1.25-0.874 0.541-1.848 0.955-2.895 1.235-0.959 0.255-1.939 0.385-2.912 0.385zM10.282 4.623c-4.389 0-7.96 2.879-7.96 6.417 0 2.009 1.137 3.864 3.119 5.092l0.243 0.152-0.101 0.267c-0.363 0.967-0.964 1.811-1.736 2.459 0.756-0.036 1.515-0.153 2.261-0.351 1.021-0.271 1.965-0.681 2.806-1.214l0.105-0.067 0.123 0.015c2.108 0.243 4.227-0.195 5.915-1.218l0.131-0.081 0.149 0.045c0.72 0.214 1.519 0.275 2.266 0.191l0.123-0.015 0.104 0.067c0.49 0.309 1.041 0.547 1.635 0.705 0.305 0.082 0.614 0.139 0.924 0.173-0.337-0.354-0.603-0.774-0.778-1.241l-0.102-0.268 0.245-0.152c1.14-0.704 1.795-1.765 1.795-2.911 0-1.695-1.441-3.163-3.503-3.57l-0.178-0.036-0.075-0.167c-1.121-2.566-4.138-4.291-7.511-4.291z"></path>
+                <path class="path2" d="M21.058 17.995c-0.592 0-1.189-0.080-1.773-0.234-0.622-0.165-1.201-0.409-1.725-0.725-0.205 0.018-0.412 0.028-0.623 0.028-2.927 0-5.308-1.963-5.308-4.377s2.381-4.377 5.308-4.377c2.926 0 5.307 1.964 5.307 4.377 0 1.304-0.678 2.505-1.873 3.339 0.268 0.554 0.7 1.010 1.237 1.301l1.069 0.579-1.213 0.075c-0.133 0.007-0.268 0.013-0.406 0.013zM17.726 16.314l0.104 0.067c0.49 0.309 1.041 0.547 1.635 0.705 0.305 0.082 0.614 0.139 0.924 0.173-0.337-0.354-0.603-0.774-0.778-1.241l-0.102-0.268 0.245-0.152c1.14-0.704 1.795-1.765 1.795-2.911 0-2.028-2.068-3.678-4.611-3.678s-4.61 1.65-4.61 3.678c0 2.030 2.068 3.68 4.61 3.68 0.226 0 0.447-0.014 0.664-0.039l0.123-0.014z"></path>
+            </g>
+        </defs>
+    </svg>
     <div class="overlay" style="display: none"></div>
 	<div id="fb-root"></div>
 	<script>
@@ -182,11 +186,11 @@
                         [% IF c.user.picture_url %]
                             <img class="img-circle" alt="" id="current_user_avatar">
                             <script>
-                                $("#current_user_avatar").error(function() { $( this ).attr("src", "/cobrands/pormibarrio/images/no_pic.png"); }).
+                                $("#current_user_avatar").error(function() { $( this ).attr("src", "/cobrands/pormibarrio/images/no-profile-picture.jpg"); }).
                                     attr( "src", "[% c.user.picture_url %]" );
                             </script>
                         [% ELSE %]
-                            <img class="img-circle" alt="" src="/cobrands/pormibarrio/images/no_pic.png">                              
+                            <img class="img-circle" alt="" src="/cobrands/pormibarrio/images/no-profile-picture.jpg">                              
                         [% END %]
                         [% c.user.name | html %]
                     </a>
@@ -218,7 +222,7 @@
                  <!--Vista sin login-->
                     <div class="list-inline user-log-on">
                         <a class="user-name" href="#">
-                            <img class="img-circle" alt="" src="/cobrands/pormibarrio/images/no_pic.png">Anonimo
+                            <img class="img-circle" alt="" src="/cobrands/pormibarrio/images/no-profile-picture.jpg">Anonimo
                         </a>
                         <li><a class="green" href="/auth">Inicia sesión ó Registrate</a></li>
                     </div>
@@ -242,6 +246,7 @@
             <ul class="r-small">
                 <li class="reportar reportar-small">
                     <a href="javascript:void(0)" onclick="geolocate(10000, 3)">
+                        <svg class="icon icon-icono8" viewBox="0 0 24 24"><use xlink:href="#icon-icono8"></use></svg>
                         <span>Reportar</span>
                     </a>
                 </li>
