--- a/templates/web/pormibarrio/report/update.html
+++ b/templates/web/pormibarrio/report/update.html
@@ -6,17 +6,17 @@
 			[% IF update.users.picture_url %]	
 				<img alt="" class="user_avatar_[% update.users.id %]"></div>
 				<script>
-					$(".user_avatar_[% update.users.id %]").error(function() { $(this).attr("src", "/cobrands/pormibarrio/images/no_pic.png"); }).
+					$(".user_avatar_[% update.users.id %]").error(function() { $(this).attr("src", "/cobrands/pormibarrio/images/no-profile-picture.jpg"); }).
 						attr( "src", "[% update.users.picture_url %]" );
 				</script>
 			[% ELSE %]
-				<img alt="" src="/cobrands/pormibarrio/images/no_pic.png"></div>
+				<img alt="" src="/cobrands/pormibarrio/images/no-profile-picture.jpg"></div>
 			[% END %]
 		<div class="user-info">
 			<h4>[% update.users.name %]</h4>
 			<span class="time-report">[% INCLUDE meta_line %]</span>
 		</div>
-		<div class="user-comment">
+		<div class="user-comment comment">
 			[% add_links( update.text ) | html_para %]
 			[% INCLUDE 'report/photo.html' object=update %]
 		</div>
