--- a/templates/web/pormibarrio/report/update-form.html
+++ b/templates/web/pormibarrio/report/update-form.html
@@ -1,16 +1,22 @@
 [% allow_creation = !c.cobrand.only_authed_can_create || (c.user && c.user.from_body) %]
 [% IF allow_creation %]
 <!--Update Report-->
-	[% INCLUDE 'errors.html' %]
-	<form method="post" action="[% c.uri_for( '/report/update' ) %]" id="form_update_form" name="updateForm" class="validate"[% IF c.cobrand.allow_photo_upload %] enctype="multipart/form-data"[% END %]>
+<form method="post" action="[% c.uri_for( '/report/update' ) %]" id="form_update_form" name="updateForm" class="validate"[% IF c.cobrand.allow_photo_upload %] enctype="multipart/form-data"[% END %]>
 		<input type="hidden" name="submit_update" value="1">
 		<input type="hidden" name="id" value="[% problem.id | html %]">
-		
+	[% INCLUDE 'errors.html' %]
+	<div class="user-avatar current-user-avatar">
+        [% IF c.user.picture_url %]
+            <img class="img-circle" alt="" id="current_user_avatar" src="[% c.user.picture_url %]">
+        [% ELSE %]
+            <img class="img-circle" alt="" src="/cobrands/pormibarrio/images/no-profile-picture.jpg">
+        [% END %]
+    </div>
+    <div class="user-info comments-user-info">
 		<div class="form-group">
-			<input type="text" class="form-control [% IF field_errors.name %] error [% END %]" name="name" id="form_name" value="[% update.name || c.user.name | html %]" placeholder="Nombre y apellido">
-
-			<input type="email" name="form_rznvy" id="form_rznvy" value="[% c.user.email | html %]" class="form-control [% IF field_errors.email %] error [% END %]" placeholder="[% loc('Email' ) %]">
-
+			<h4>[% update.name || c.user.name | html %]</h4>
+		</div>
+		<div class="form-group">
 		[% IF c.cobrand.allow_photo_upload %]
 			[% IF upload_fileid %]
 				<img align="right" src="/photo/[% upload_fileid %].temp.jpeg" alt="">
@@ -20,10 +26,10 @@
 				[% IF field_errors.photo %]
 					<p class='form-error'>[% field_errors.photo %]</p>
 				[% END %]
-				<input type="file" name="photo" id="form_photo">
+				<button type="button" class="upload-img">Añadir imagen</button>
+				<input type="file" id="InputFile" name="photo">
 		[% END %]
 		</div>
-
 		<div class="boxs">
 			<div class="checkbox">
 				<input type="checkbox" name="may_show_name" id="form_may_show_name" value="1"[% ' checked' IF update.anonymous==0 OR (c.cobrand.default_show_name AND update.anonymous=='') %]>
@@ -61,66 +67,19 @@
 		</div>
 		<textarea rows=4 name="update" id="form_update" placeholder="Escriba aquí su comentario *" class="[% IF field_errors.update %] error [% END %] required">[% update.text | html %]</textarea>
 		<!--Sign In-->
-	[% IF c.user_exists %]
-		<input class="btn btn-sky btn-small btn-comentar" type="submit" id="update_post" value="Comentar">
-	</div>
-	[% ELSE %]
-		<button class="btn btn-sky btn-small btn-comentar btn-disabled" disabled="disabled" type="submit">Comentar</button>
-	</div>
-		<div class="login">
-    			<div class="bloque-sesion">
-    				<div class="ir" id="report-new-login">
-    					<h2>Accede a tu cuenta</h2>
-    					<p>Conectate a tu cuenta para poder finalizar tu reporte y enviarlo a la Intendencia.</p>
-    				</div>
-                    <div class="checkbox-group">
-                        <input type="checkbox" name="may_show_name_social" id="form_may_show_name_social" value="1"[% ' checked' IF report.anonymous==0 OR (c.cobrand.default_show_name AND report.anonymous=='') %]>
-                        <label class="inline" for="form_may_show_name_social">[% loc('Show my name publicly') %] </label>
-                    </div>
-    				[% IF c.config.FACEBOOK_APP_ID || c.config.TWITTER_KEY %]
-    					<div class="social-buttons">
-    						[% IF c.config.FACEBOOK_APP_ID %]
-    							<button name="facebook_sign_in" id="facebook_sign_in" value="facebook_sign_in" class="btn btn-block btn-social btn-facebook">Registrate con Facebook</button>
-    						[% END %]
-    						[% IF c.config.TWITTER_KEY %]
-    							<button name="twitter_sign_in" id="twitter_sign_in" value="twitter_sign_in" class="btn btn-block btn-social btn-twitter">Registrate con Twitter</button>
-    						[% END %]
-    					</div>
-    				[% END %]
-    				<p>...ó ingresa los datos si ya tienes cuenta:</p>
-                    <div class="checkbox-group">
-                        <input type="checkbox" id="remember_me" name="remember_me" value='1'[% ' checked' IF remember_me %]>
-                        <label class="n inline" for="remember_me">[% loc('Keep me signed in on this computer') %]</label>
-                    </div>
-    				<div class="form-group">
-    					<input type="password" class="form-control [% IF field_errors.password %] error [% END %]" name="password_sign_in" id="password_sign_in" placeholder="Contraseña" value="">
-
-                        <input class="btn btn-block btn-reportar" type="submit" id="submit_sign_in" name="submit_sign_in" value="[% loc('Submit') %]">
-                        <p class="no-account">
-                            ¿No utilizas redes sociales? No hay problema!<br>
-                            <a class="green registrate" href="#">Regístrate aquí con tu mail</a>
-                        </p>
-    				</div>
-    			</div> <!-- bloque-sesion -->
-                <div class="bloque-registro">
-                    <div class='full-wide'>
-                        <a class="btn btn-back registrate-back" href="#">Volver</a>
-                    </div>
-                    <div class="ir">
-                        <h2>Regístrate y se parte</h2>
-                        <p>Crea una cuenta en PorMiBarrio y comienza a colaborar.</p>
-                    </div>
-                    <div class="form-group">
-                        [% INCLUDE 'report/new/extra_name.html' %]
-                        <input type="text" placeholder="Cédula de Identidad: 0.000.000-0" class="form-control form-focus-trigger [% IF field_errors.identity_document %] error [% END %]" value="[% report.user.identity_document | html %]" name="identity_document" id="form_identity_document" >
-                        <input class="form-control" type="text" value="[% report.user.phone | html %]" name="phone" id="form_phone" placeholder="Teléfono (opcional)">              
-                        <input name="password_register" id="password_register" type="password" placeholder="Contraseña" class="form-control [% IF field_errors.password %] error [% END %]">
-                    </div>
-                    <div class="form-group">
-                        <button class="btn btn-block btn-green" type="submit" id="submit_register" name="submit_register">Regístrate y publica</button>
-                    </div>
-                </div>
-			</div> <!-- Sign In -->
+		[% IF c.user_exists %]
+			<input type="hidden" name="name" id="form_name" value="[% update.name || c.user.name | html %]">
+			<input type="hidden" name="form_rznvy" id="form_rznvy" value="[% update.email || c.user.email | html %]">
+			<input class="btn btn-sky btn-small btn-comentar" type="submit" id="update_post" value="Comentar"/>
+		[% ELSE %]
+			<button class="btn btn-sky btn-small btn-comentar btn-disabled" disabled="disabled" type="submit">Comentar</button>
 		[% END %]
-	</form>
+	</div>
+	[% IF !c.user_exists %]
+		[% INCLUDE auth/login_block.html 
+	        summary = loc("Login to your account to be able to send your update to your local government")
+	        sign_in_button = '<button class="btn btn-block btn-green" type="submit" id="submit_register" name="submit_register">Regístrate y publica</button>'
+	    %]
+	[% END %]
+</form>
 [% END %]
